--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "start": "medusa develop"
   },
   "dependencies": {
-    "@medusajs/medusa": "^1.6.0",
+    "@medusajs/medusa": "^1.7.0",
     "@medusajs/medusa-cli": "^1.3.3",
     "medusa-fulfillment-manual": "^1.1.31",
     "medusa-interfaces": "^1.3.3",
     "medusa-payment-manual": "^1.0.16",
     "medusa-payment-stripe": "^1.1.45",
+    "taxjar": "^4.0.1",
     "typeorm": "^0.2.36"
   },
   "repository": "https://github.com/medusajs/medusa-starter-default.git",
